# glossary

./: .gitignore  .readthedocs.yaml  README.rst  conf.py  glossary.rst  index.rst  pyproject.toml  setup.cfg
